# fastpdf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  bench.py  pyproject.toml
.github/workflows/: build-wheels.yml  ci.yml  render-wheels.yml
crates/fastpdf-core/: Cargo.toml
crates/fastpdf-core/benches/: extraction.rs
crates/fastpdf-core/src/: document.rs  extract.rs  font.rs  image.rs  layout.rs  lib.rs  types.rs
crates/fastpdf-py/: Cargo.toml
crates/flashpdf-core/: Cargo.toml
crates/flashpdf-core/benches/: extraction.rs
crates/flashpdf-core/src/: crypto.rs  document.rs  extract.rs  font.rs  layout.rs  lib.rs  types.rs
crates/flashpdf-core/src/parser/: content_stream.rs  object.rs  recovery.rs  xref.rs
crates/flashpdf-core/tests/: test_object_parser.rs  test_real_pdf.rs  test_xref.rs
crates/flashpdf-py/: Cargo.toml
docs/: API.md  BENCHMARK.md  BENCHMARK_FULL.md  BENCHMARK_RENDER.md  CHAR_SIM_AUDIT.md  DESIGN_V1.md  DESIGN_V2.md  HISTORY.md  LIMITATIONS.md  MIGRATION_FROM_FITZ.md  PERFORMANCE.md  ROADMAP.md  demo.html
examples/: markdown_export.py  ocr_bridge.py  rag_index.py  toc_to_yaml.py
python/fastpdf/: __init__.py
python/flashpdf/: __init__.py
scripts/: check_memory.sh  collect_test_pdfs.sh  flamegraph.sh
tests/: bench_api_parity.py  bench_corpus.py  bench_images.py  benchmark_4engines.py  comprehensive_benchmark.py  comprehensive_compare.py  diag_block_order.py  diag_divergences.py  diag_layout.py  diag_page1.py  diag_span_gaps.py  end_to_end.py  fastpdf_vs_ritz.py  gen_demo.py  gen_demo_png.py  pymupdf_comparison.py
(+10 files in other folders)
